--- a/projekt/style/logowanie.css
+++ b/projekt/style/logowanie.css
@@ -1,3 +1,4 @@
+/* przycisk od zmiany języka */
 #language-toggle {
     position: fixed;
     top: 60px; /* Zmieniona wartość top, aby przycisk był umieszczony poniżej */
@@ -8,6 +9,7 @@
     padding: 10px 20px;
     cursor: pointer;
 }
+/* przycisk od zmiany motywu */
 #theme-toggle {
     position: fixed;
     top: 20px;
@@ -18,6 +20,7 @@
     padding: 10px 20px;
     cursor: pointer;
 }
+/* przycisk od wyjścia ze strony */
 #exit {
     position: fixed;
     top: 20px;
@@ -40,6 +43,7 @@
     --text-color: #fff;
     --border-color: #fff;
 }
+/* wygląd body */
 body { 
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
@@ -50,7 +54,7 @@ body {
     align-items: center;
     height: 100vh;
 }
-
+/* wygląd okienka */
 .login-container {
     background-color: #fff;
     padding: 20px;
@@ -58,11 +62,10 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-
+/* h2 w okienku */
 .login-container h2 {
     margin-bottom: 20px;
 }
-
 .form-group {
     margin-bottom: 20px;
 }
@@ -74,7 +77,7 @@ body {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
+/* przycisk logowania, zmiany hasła itp. */
 .btn-login {
     background-color: #4caf50;
     color: #fff;
@@ -83,38 +86,41 @@ body {
     border-radius: 4px;
     cursor: pointer;
 }
-
+/* podczas najechania na przycisk */
 .btn-login:hover {
     background-color: #45a049;
 }
-
+/* link rejestracji*/
 .register-link {
     margin-top: 15px;
 }
-
+/* a href linku */
 .register-link a {
     color: #007bff;
     text-decoration: none;
 }
-
+/* podczas najechania na link */
 .register-link a:hover {
     text-decoration: underline;
 }
+/* link zapomnienie hasła */
 .forgot-password-link {
     margin-top: 15px;
 }
-
+/* a href linku */
 .forgot-password-link a {
     color: #007bff;
     text-decoration: none;
 }
-
+/* podczas najechania na link */
 .forgot-password-link a:hover {
     text-decoration: underline;
 }
+/* errory */
 .error-message {
     color: red;
 }
+/* dobre wiadmomości, potwierdzenia */
 .good-message {
     color: rgb(0, 255, 0);
 }
